--- a/styles.css
+++ b/styles.css
@@ -29,8 +29,14 @@ body {
   width: 30vw;
   min-height: 400px;
   border: 0.1rem solid white;
+  box-shadow: 1px 3px 15px white;
   position: relative;
   padding: 1rem;
+}
+h6 {
+  font-size: 1.3rem;
+  color: rgba(0, 0, 0, 0.562);
+  text-transform: uppercase;
 }
 ul {
   list-style-type: none;
